--- a/client/views/signin/signin.html
+++ b/client/views/signin/signin.html
@@ -2,7 +2,7 @@
 
   <div class="col-lg-3 col-lg-offset-4">
     {{> atForm}}
-    <button type="button" class="btn btn-primary">go back to home page</button>
+    <button id="home-button" type="button" class="btn btn-primary">go back to home page</button>
   </div>
 
 </template>
